--- a/index.html
+++ b/index.html
@@ -37,19 +37,22 @@
             d="M30 8h-1.881c2.042-1.177 2.726-2.454 2.776-2.553.11-.22 1.043-2.191.05-3.799C30.268.555 28.941 0 27 0c-4.525 0-7.512 2.915-8.467 4h-5.066C12.512 2.915 9.525 0 5 0 3.059 0 1.732.555 1.056 1.648c-.994 1.608-.06 3.579.05 3.799.049.099.733 1.376 2.775 2.553H2c-1.103 0-2 .897-2 2v3a1 1 0 0 0 1 1h1v17a1 1 0 0 0 1 1h26a1 1 0 0 0 1-1V14h1a1 1 0 0 0 1-1v-3c0-1.103-.897-2-2-2zM20 20h8v4h-8v-4zm7-18c1.164 0 1.96.247 2.241.696.353.564.01 1.558-.128 1.842-.018.034-1.82 3.166-9.113 3.436V5.363C20.701 4.566 23.248 2 27 2zm-9 4v2h-4V6h4zM4 20h8v4H4v-4zM2.895 4.553c-.122-.242-.5-1.267-.138-1.853C3.036 2.249 3.833 2 5 2c3.752 0 6.299 2.566 7 3.363v2.611c-7.293-.27-9.095-3.402-9.105-3.421zM2 10h10v2H2v-2zm10 4v4H4v-4h8zM4 26h8v4H4v-4zm10 4V10h4v20h-4zm6 0v-4h8v4h-8zm8-12h-8v-4h8v4zm2-6H20v-2h10v2z" />
         </svg>
         <div class="card__content">
+          <div class="flexBox">
+            <img src="Images/Passion.webp" alt="" />
+          </div>
           <p class="card__title">All Quests Complete</p>
           <p class="card__description">
-            Thank you for taking the time to fully interact with my website,
-            completing every quest action. This popup serves as a certification
-            of completion that prompts you from internet guest to an internet
-            freind of mine. I will be adding more valuable rewards once my game,
-            The Atlas Six, is in public releasing stage so do stay connected.
-            Goodbye for now.
+            Thank you for taking the time to fully engage with our website and
+            complete every quest action. This popup serves as a certification of
+            completion, promoting you from an internet guest to an internet
+            friend of ours. We will be adding more valuable rewards once our
+            game, The Atlas Six, reaches its public release stage, so do stay
+            connected.
           </p>
           <!-- /* From Uiverse.io by devanshsatwara */ -->
           <div class="flexBox">
-            <button class="ui-btn">
-              <span onclick="hidePopUp()">Return</span>
+            <button class="ui-btn" onclick="hidePopUp()">
+              <span>Return</span>
             </button>
           </div>
         </div>
@@ -64,7 +67,7 @@
         </h1>
         <h4 style="margin-bottom: 5%">A Software Developer</h4>
         <!-- /* From Uiverse.io by JkHuger */  -->
-        Your current Quests:
+        <p style="color: white">Your current Quests:</p>
         <div id="checklist">
           <input name="r" type="checkbox" id="NavigationTask" disabled />
           <label for="NavigationTask">Open navigation menu</label>
