Resized columns for skills
Might probably definitely will remove these

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
           </div>
           <div>
             <ion-icon name="cloud-upload-outline"></ion-icon>
-            <h2>Database Design and Development</h2>
+            <h2>Database Development</h2>
             <p>
               In a data centered age, Databases facilitate the storage,
               retrieval and manipulation of Important Information to ensure the
@@ -364,11 +364,10 @@
             <ion-icon name="earth-outline"></ion-icon>
             <h2>Web Applications Development</h2>
             <p>
-              The online presence of a business can be made or broken by various
-              factors, one of those crucial factors is a website. A website is
-              not merely a page lost on the internet, It is a hub for your daily
-              transactions and a selling point for your entity. Allow me to sell
-              your idea for you... digitally.
+              A crucial factor in a business's digital presence is a website. A
+              website is not merely a page lost on the internet, It is a hub for
+              your daily transactions and a selling point for your entity. Allow
+              me to sell your idea for you... digitally.
             </p>
             <a
               href="https://www.sumologic.com/glossary/web-application-development/#:~:text=Web%20application%20development%20describes%20the,or%20customers%20via%20the%20internet."
