--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         <p style="color: white">Your current Quests:</p>
         <div id="checklist">
           <input name="r" type="checkbox" id="NavigationTask" disabled />
-          <label for="NavigationTask">Open navigation menu</label>
+          <label for="NavigationTask">Open nav menu</label>
           <input name="r" type="checkbox" id="CVTask" disabled />
           <label for="CVTask">Download my CV</label>
           <input name="r" type="checkbox" id="AnimationsTask" disabled />
@@ -644,12 +644,7 @@
                   <br />
                   Author:@PassionOverPain
                 </p>
-                <a
-                  class="eye"
-                  href="https://github.com/Passion-Over-Pain"
-                  target="_blank"
-                  title="View My Seventh Floor Media Project"
-                  onclick="openGitHub()">
+                <a class="eye" onclick="openGitHub()">
                   <ion-icon name="eye-outline"></ion-icon>
                 </a>
               </div>
@@ -680,8 +675,11 @@
                   <br />
                   Author:@PassionOverPain, @LanceKupeta (Founder)
                 </p>
-
-                <ion-icon name="eye-outline" onclick="openGitHub()"></ion-icon>
+                <a class="eye">
+                  <ion-icon
+                    name="eye-outline"
+                    onclick="openGitHub()"></ion-icon>
+                </a>
               </div>
             </div>
             <div class="project">
@@ -705,8 +703,11 @@
                   <br />
                   Author:@PassionOverPain
                 </p>
-
-                <ion-icon name="eye-outline" onclick="openGitHub()"></ion-icon>
+                <a class="eye">
+                  <ion-icon
+                    name="eye-outline"
+                    onclick="openGitHub()"></ion-icon>
+                </a>
               </div>
             </div>
           </div>
