--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
   </head>
   <body>
     <div id="preloader">
-      <div id="Loading">
-        Loading....Please be Patient
-        <span>:)</span>
-      </div>
+      <div id="Loading">Loading....Please be Patient</div>
     </div>
 
     <!-------------------------------------------Header Start----------------------------------------------------------------------------------->
@@ -528,7 +525,14 @@
               <ul>
                 <li>
                   <span style="color: #0f0">
-                    High School: Victoria Park High [2018 ~ 2022]
+                    High School: Victoria Park High
+                    <span
+                      style="
+                        font-family: Cambria, Cochin, Georgia, Times,
+                          'Times New Roman', serif;
+                      ">
+                      [2018 ~ 2022]
+                    </span>
                   </span>
                 </li>
                 <ul>
@@ -547,7 +551,14 @@
                 </ul>
                 <li>
                   <span style="color: #0f0">
-                    Nelson Mandela University [2023 ~ 2025]
+                    Nelson Mandela University
+                    <span
+                      style="
+                        font-family: Cambria, Cochin, Georgia, Times,
+                          'Times New Roman', serif;
+                      ">
+                      [2023 ~ 2025]
+                    </span>
                   </span>
                 </li>
                 <ul>
