--- a/index.html
+++ b/index.html
@@ -256,9 +256,7 @@
               <li><strong>Tinotenda Mhedziso</strong></li>
               <li>
                 Email:
-                <a href="mailto:tinomhedziso21@gmail.com">
-                  tinomhedziso21@gmail.com
-                </a>
+                <a href="#ContactSection">tinomhedziso21@gmail.com</a>
               </li>
               <li>
                 GitHub:
@@ -300,7 +298,9 @@
           I'm
           <span style="color: #0f0">Tinotenda Mhedziso</span>
         </h1>
-        <h4 style="margin-bottom: 5%">A Software Developer</h4>
+        <h4 style="margin-bottom: 5%">
+          A Fullstack | Indie | Software Developer
+        </h4>
         <!-- /* From Uiverse.io by JkHuger */  -->
         <p style="color: white">Your current Quests:</p>
         <div id="checklist">
@@ -353,7 +353,7 @@
             </a>
           </li>
           <li style="--i: 4; --clr: #04fc43">
-            <a href="mailto:tinomhedziso21@gmail.com">
+            <a href="#ContactSection">
               <ion-icon name="mail-outline" title="Contact Me"></ion-icon>
             </a>
           </li>
@@ -710,11 +710,64 @@
         </div>
       </section>
       <!------------------------------------------------Contact---------------------------------------------------------------------------------------->
+      <section id="ContactSection">
+        <h3 class="subTitle">Contact Me</h3>
+        <div id="contactContainer">
+          <!-- From Uiverse.io by SalladShooter -->
+          <div class="light-button">
+            <button class="bt">
+              <div class="light-holder">
+                <div class="dot"></div>
+                <div class="light"></div>
+              </div>
+              <div class="button-holder" onclick="openDevTo()">
+                <ion-icon name="reader-sharp"></ion-icon>
+                <p>Dev.to</p>
+              </div>
+            </button>
+          </div>
+          <div class="light-button">
+            <button class="bt">
+              <div class="light-holder">
+                <div class="dot"></div>
+                <div class="light"></div>
+              </div>
+              <div class="button-holder" onclick="openEmail()">
+                <ion-icon name="mail-sharp"></ion-icon>
+                <p>Email</p>
+              </div>
+            </button>
+          </div>
+          <div class="light-button">
+            <button class="bt">
+              <div class="light-holder">
+                <div class="dot"></div>
+                <div class="light"></div>
+              </div>
+              <div class="button-holder" onclick="openGitHub()">
+                <ion-icon name="logo-github"></ion-icon>
+                <p>GitHub</p>
+              </div>
+            </button>
+          </div>
+          <div class="light-button">
+            <button class="bt">
+              <div class="light-holder">
+                <div class="dot"></div>
+                <div class="light"></div>
+              </div>
+              <div class="button-holder" onclick="openLinkedIn()">
+                <ion-icon name="logo-linkedin"></ion-icon>
+                <p>LinkedIn</p>
+              </div>
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
-      <section class="Contact" id="ContactSection">
+      <section class="Contact" id="FooterSection">
         <div class="container">
-          <h3 class="subTitle">Contact Me</h3>
           <a href="mailto:tinomhedziso21@gmail.com">
             <p class="email">
               For
@@ -724,23 +777,6 @@
               Email:tinomhedziso21@gmail.com
             </p>
           </a>
-          <div class="Social-Icons">
-            <a
-              href="https://www.linkedin.com/in/tinotenda-mhedziso/"
-              target="_blank">
-              <ion-icon
-                class="Icon animate"
-                name="logo-linkedin"
-                title="My LinkedIn profile"></ion-icon>
-            </a>
-            <a>
-              <ion-icon
-                onclick="openGitHub()"
-                class="Icon animate"
-                name="logo-github"
-                title="My GitHub profile"></ion-icon>
-            </a>
-          </div>
           <p class="Copyright">
             All Rights Reserved © under Tinotenda Mhedziso. Designed by
             Tinotenda Mhedziso.
