--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
             </div>
           </div>
           <div class="flexBox">
-            <button class="actionBtn ui-btn" id="Git" onclick="openGitHub()">
+            <button class="actionBtn ui-btn" id="Git" onclick="openProjects()">
               <span>All Projects</span>
               <ion-icon name="logo-github"></ion-icon>
             </button>
