--- a/index.html
+++ b/index.html
@@ -774,12 +774,15 @@
               <span style="color: #04fc43">Any</span>
               Inquiries
               <br />
-              Email:tinomhedziso21@gmail.com
+              Feel free to
+              <span style="color: #04fc43">email me</span>
+              or ask my chatbot Passion.
             </p>
           </a>
           <p class="Copyright">
-            All Rights Reserved © under Tinotenda Mhedziso. Designed by
-            Tinotenda Mhedziso.
+            All Rights Reserved © under
+            <span style="color: #04fc43">Tinotenda Mhedziso</span>
+            . Designed by Tinotenda Mhedziso.
           </p>
         </div>
       </section>
