Improved better design
a couple of changes with intersection observer

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
               id="Tino" />
           </div>
           <div class="AboutC2">
-            <h3 class="subTitle">About Me</h3>
+            <h3 class="subTitle bounce">About Me</h3>
             <p>
               Final year Bachelor of Information Technology student, JavaScript
               developer and Open Source contributer. Creating my first software
@@ -582,26 +582,26 @@
         </div>
       </section>
       <!-------------------------------------------Skills--------------------------------------------------------------------------------------------->
-      <section class="skills-section" id="SkillsSection">
-        <h2 class="section-title">My Skills</h2>
+      <section class="Skills" id="SkillsSection">
+        <h2 class="section-title subTitle bounce">My Skills</h2>
         <div class="skills-container">
           <div class="skill-card row-1 bounce">
             <ion-icon name="cloud-download-outline" class="icon"></ion-icon>
             <h3>Database Development</h3>
           </div>
-          <div class="skill-card row-1 bounce">
+          <div class="skill-card row-2 bounce">
             <ion-icon name="desktop-outline" class="icon"></ion-icon>
             <h3>Desktop Applications Development</h3>
           </div>
           <div class="skill-card row-1 bounce">
-            <ion-icon name="game-controller-outline" class="icon"></ion-icon>
+            <ion-icon name="game-controller-sharp" class="icon"></ion-icon>
             <h3>Game Development</h3>
           </div>
           <div class="skill-card row-2 bounce">
-            <ion-icon name="game-controller-outline" class="icon"></ion-icon>
+            <ion-icon name="star-half-sharp" class="icon"></ion-icon>
             <h3>Quality Assurance</h3>
           </div>
-          <div class="skill-card row-2 bounce">
+          <div class="skill-card row-1 bounce">
             <ion-icon name="fitness-outline" class="icon"></ion-icon>
             <h3>Unity Testing</h3>
           </div>
@@ -614,7 +614,7 @@
       <!------------------------------------------------Projects---------------------------------------------------------------------------------------->
       <section class="Projects" id="ProjectsSection">
         <div class="container">
-          <h3 class="subTitle">My Projects</h3>
+          <h3 class="subTitle row-2 bounce">My Projects</h3>
           <div class="projectsList">
             <div class="project">
               <img
@@ -710,8 +710,8 @@
         </div>
       </section>
       <!------------------------------------------------Contact---------------------------------------------------------------------------------------->
-      <section id="ContactSection">
-        <h3 class="subTitle">Contact Me</h3>
+      <section class="Contacts" id="ContactSection">
+        <h3 class="subTitle bounce">Contact Me</h3>
         <div id="contactContainer">
           <!-- From Uiverse.io by SalladShooter -->
           <div class="light-button">
@@ -766,7 +766,7 @@
       </section>
     </main>
     <footer>
-      <section class="Contact" id="FooterSection">
+      <section class="footer" id="FooterSection">
         <div class="container">
           <a href="mailto:tinomhedziso21@gmail.com">
             <p class="email">
@@ -782,7 +782,9 @@
           <p class="Copyright">
             All Rights Reserved © under
             <span style="color: #04fc43">Tinotenda Mhedziso</span>
-            . Designed by Tinotenda Mhedziso.
+            . A
+            <span style="color: #04fc43">Passion Over Pain</span>
+            product.
           </p>
         </div>
       </section>
