--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <h4>Fullstack | Game | Software Developer</h4>
         <!-- /* From Uiverse.io by JkHuger */  -->
         <!-- From Uiverse.io by 00Kubi -->
-        <div id="checkCon" class="visible flexBox">
+        <div id="checkCon" class="flexBox hidden">
           <p style="color: white">Your current Quests:</p>
           <div id="checklist">
             <input name="r" type="checkbox" id="NavigationTask" disabled />
